terraform-demo.tf
provider "aws" {
  region  = "ap-south-1"
}
resource "aws_instance" "Sayaliserver" {
  ami = "ami-079b5e5b3971bd10d"
  instance_type = "t2.micro"
  availability_zone = "ap-south-1b"
  key_name = "Sayali_key"
  tags = {
    Name = "sayali_Terraform"
    Owner = "Sayali"
    Purpose = "Terraform_practice"
}
}
